--- a/app.json
+++ b/app.json
@@ -1,26 +1,26 @@
 {
   "expo": {
-    "name": "rn-first-app",
-    "slug": "rn-first-app",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "name": "imoveis",
+    "description": "imoveis fiap",
+    "slug": "snack-7d32414a-397a-4cbe-8eb0-c27835fb74a2",
+    "privacy": "unlisted",
+    "sdkVersion": "37.0.0",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+    "primaryColor": "#cccccc",
+    "icon": "https://d1wp6m56sqw74a.cloudfront.net/~assets/c9aa1be8a6a6fe81e20c3ac4106a2ebc",
+    "loading": {
+      "icon": "https://d1wp6m56sqw74a.cloudfront.net/~assets/c9aa1be8a6a6fe81e20c3ac4106a2ebc",
+      "hideExponentText": false
     },
-    "updates": {
-      "fallbackToCacheTimeout": 0
+    "packagerOpts": {
+      "assetExts": [
+        "ttf",
+        "mp4",
+        "otf",
+        "xml"
+      ]
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
     "ios": {
       "supportsTablet": true
     }
